# QualityMeasures

./: .gitignore  README.md
ConvexHull/: .gitignore  CMakeLists.txt  build.sh  cmake.sh  docker-compose.yml  extractValues.sh  pythonRun.sh  run.sh  start.sh
ConvexHull/Modules/: FindPugiXML.cmake  FindQhull.cmake
ConvexHull/THREAD_GRASP/: CMakeLists.txt  thread_grasp.cpp  thread_grasp.hpp
ConvexHull/data/grasps/DetBotRight/: DetBotRight.xml  DetBotRight30.xml  DetBotRight30_KAUTHAM.txt  DetBotRightAxisGrasps.txt  DetBotRightConfigurations.txt  DetBotRight_KAUTHAM.txt  Det_RightConfigurations.txt  Det_Right_Kautham.txt  GraspTransforms30.txt  GraspsQuality500.txt
ConvexHull/data/grasps/DetBotRight/pcd/: DetBotGrasp1.pcd  DetBotGrasp10.pcd  DetBotGrasp11.pcd  DetBotGrasp12.pcd  DetBotGrasp13.pcd  DetBotGrasp14.pcd  DetBotGrasp15.pcd  DetBotGrasp16.pcd  DetBotGrasp17.pcd  DetBotGrasp18.pcd  DetBotGrasp19.pcd  DetBotGrasp2.pcd  DetBotGrasp20.pcd  (+17 more)
ConvexHull/data/grasps/MilkBottle/: MilkBottleGrasp1.pcd  MilkBottleGrasp2.pcd
ConvexHull/data/grasps/SportBottle/: SportBottle20.xml  SportBottle20AxisGrasps.txt  SportBottle30.xml  SportBottle30AxisGrasps.txt  SportBottle30_KAUTHAM.txt  SportBottle500.xml  SportBottlePartial1.xml  SportBottlePartial15.xml  SportBottlePartial17.xml  SportBottlePartial18.xml  SportBottlePartial19.xml  SportBottlePartial2.xml  SportBottlePartial8.xml  SportBottlePartial9.xml
ConvexHull/data/grasps/WaterBottle/: Right_Grasps_NEW.xml
ConvexHull/data/objects/PCD/: DetergentBottle.pcd  MilkBottle.pcd  outVDishBottle.pcd  outVbox.pcd  outVcage.pcd  outVclutter.pcd  outVdining_table.pcd  outVshelf.pcd  outVwater_bottle2.pcd
ConvexHull/data/objects/VMRL/: dining_table.wrl  water_bottle.wrl
ConvexHull/include/: ContactConeGenerator.h  ConvexHull.h  Data.h  MVBB.h  Mtools.h  Wrenches.h
ConvexHull/models/objects/PCD/: outVwater_bottle.pcd
ConvexHull/python/: ContactConeGenerator.py  DepthCamera_2022-12-29-10-29-08.json  Mtools.py  Quality_Values.txt  RenderOption_2022-12-29-10-29-07.json  RenderOption_2022-12-29-10-29-08.json  convexHull.py  dataGrasp.py  graspPython.sh  inOut.py  main.py  mvbb.py  runpy.sh  triangulate.py
ConvexHull/scripts/: data.py  dataGrasp.py  graspPython.sh  inOut.py  main.py  mvbb.py  quality.py  triangulate.py
ConvexHull/src/: ContactConeGenerator.cpp  ConvexHull.cpp  Data.cpp  FilterObject.cpp  MVBB.cpp  Mtools.cpp  TransferQualityMeasure.cpp  Wrenches.cpp  main.cpp
(+51 files in other folders)
